fix: remove sidebar texts overflow in mobile view

--- a/src/Components/moviePage/MoviePage.module.css
+++ b/src/Components/moviePage/MoviePage.module.css
@@ -239,7 +239,7 @@ p.genre {
 
     .sidebarContainer {
         position: absolute;
-        transform: translateX(-100%);
+        transform: translateX(-1000px);
         border-radius: 0;
     }
 
